Implemeted mail send for user, Authentication, Authorization & Role based access
