# cmd/api/auth.go
@@ -5,7 +5,9 @@ import (
 	"encoding/hex"
 	"fmt"
 	"net/http"
+	"time"
 
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 	"github.com/iamabhishekch/Social/internal/mailer"
 	"github.com/iamabhishekch/Social/internal/store"
@@ -92,27 +94,96 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 	isProdEnv := app.config.env == "production"
 	vars := struct {
-		Username string
+		Username      string
 		ActivationURL string
 	}{
-		Username: user.Username,
+		Username:      user.Username,
 		ActivationURL: activationURL,
 	}
 
 	// send mail
 	err = app.mailer.Send(mailer.UserWelcomeTemplates, user.Username, user.Email, vars, !isProdEnv)
-	if err != nil{
+	if err != nil {
 		app.logger.Errorw("error sending welcome email", "error", err)
 	}
 
 	// rollback user creation if email fails (SAGA pattern)
-	if err := app.store.Users.Delete(ctx, user.ID); err != nil{
+	if err := app.store.Users.Delete(ctx, user.ID); err != nil {
 		app.logger.Errorw("error deleting user", "error", err)
 	}
 
-
-
 	if err := app.jsonResponse(w, http.StatusCreated, UserWithToken); err != nil {
+		app.internalServerError(w, r, err)
+	}
+}
+
+// struct
+type CreateUserTokenPayload struct {
+	Email    string `json:"email" validate:"required,email,max=255"`
+	Password string `json:"password" validate:"required,min=3,max=72"`
+}
+
+// generate token
+
+// createTokenHandler godoc
+//
+//	@Summary		Creates a token
+//	@Description	Creates a token for a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		CreateUserTokenPayload	true	"User credentials"
+//	@Success		200		{string}	string					"Token"
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/authentication/token [post]
+func (app *application) createTokenHandler(w http.ResponseWriter, r *http.Request) {
+	var payload CreateUserTokenPayload
+	if err := readJson(w, r, &payload); err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	if err := Validate.Struct(payload); err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	// fetch the user (check if the user exist) from the payload
+	user, err := app.store.Users.GetByEmail(r.Context(), payload.Email)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.unauthorizedErrorResponse(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+
+	// if err := user.Password.Compare(payload.Password); err != nil {
+	// 	app.unauthorizedErrorResponse(w, r, err)
+	// 	return
+	// }
+
+	// generate the token -> add claims
+	claims := jwt.MapClaims{
+		"sub": user.ID,
+		"exp": time.Now().Add(app.config.auth.token.exp).Unix(),
+		"iat": time.Now().Unix(),
+		"nbf": time.Now().Unix(),
+		"iss": app.config.auth.token.iss,
+		"aud": app.config.auth.token.iss,
+	}
+
+	token, err := app.authenticator.GenerateToken(claims)
+	if err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, token); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
